<resources>
    <string name="app_name">MusicRecApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="projetname">MUSICTRON</string>
    <string name="logo">logo</string>
    <string name="menu_home">Home</string>
    <string name="menu_albumreview">Album Review</string>
    <string name="menu_musiclist">Music Chart</string>
    <string name="menu_artistinfo">Artist Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_album_review">Music album review</string>
    <string name="menu_userprofile">User Profile</string>
    <string name="AppTitle">Musictron</string>
</resources>