<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.musicrecapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.musicrecapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_albumreview"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.musicrecapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_artistinfo"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_musiclist"
        android:name="com.example.musicrecapp.ui.musiclist.musiclistFragment"
        android:label="@string/menu_musiclist"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_userprofile"
        android:name="com.example.musicrecapp.ui.userprofile.UserProfileFragment"
        android:label="@string/menu_userprofile"
        tools:layout="@layout/fragment_slideshow" />
</navigation>